--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,12 @@ jobs:
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.4.1
 
-    - name: Configure Git
-      run: git config --global user.email "bot@iamabot.com" && git config --global user.name "Super Deployer Bot - LOL"
+    - name: Deploy with gh-pages
+      run: |
+        git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+        npx gh-pages -d build -u "github-actions-bot <support+actions@github.com>"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: NPM Install 
       run: npm install
