--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-tetris",
-  "homepage": "https://aleffeh.github.io/react-tetris-ghpages",
-  "version": "0.1.0",
-  "private": true,
+  "homepage": "https://mika-marcondes.github.io/react-tetris",
+  "version": "1.0.0",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
